--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   },
   "devDependencies": {
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
